--- a/templates/adherer.xml
+++ b/templates/adherer.xml
@@ -2,11 +2,17 @@
     <template id="template_admin">
               <t t-call="amicales.header"/>
                 <div class="custom-page">
-                    <ul class="nav nav-tabs">
+                    <div class="row">
+                    <div class="col-2">
+                    <div class="nav-ul">
+                    <ul class="nav nav-tabs nav-justified">
                         <li class="active"><a data-toggle="tab" href="#tab1">Page 1</a></li>
                         <li><a data-toggle="tab" href="#tab2">Page 2</a></li>
                         <li><a data-toggle="tab" href="#tab3">Page 3</a></li>
                     </ul>
+                    </div>
+                    </div>
+                    <div class="col-10">
                     <div class="tab-content">
                         <div id="tab1" class="tab-pane fade in active">
                             <h3>Page 1</h3>
@@ -20,7 +26,9 @@
                             <h3>Page 3</h3>
                             <p>Contenu de la page 3</p>
                         </div>
+                        </div>
                     </div>
+                        </div>
             </div>
          <t t-call="amicales.footer"/>
         </template>
