--- a/templates/departement.xml
+++ b/templates/departement.xml
@@ -2,14 +2,18 @@
     <template id="departement_template" name="departement Template" >
         <t t-call="amicales.header"/>
         <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
                     <h1>Faculte</h1>
-                    <table class="table table-bordered">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Nom Departement</th>
                                 <th>Faculte</th>
+                                  <th>Action</th>
 
                             </tr>
                         </thead>
@@ -18,6 +22,10 @@
                                 <tr>
                                     <td><t t-esc="departement.nomDepartement"/></td>
                                     <td><t t-esc="departement.faculte_id.nomFaculte"/></td>
+                                     <td>
+                                            <a class="btn btn-primary" t-att-href="'/departement/' + str(departement.id)">Modifier</a>
+                                            <a class="btn btn-danger" t-att-href="'/departement/supprimer/' + str(departement.id)">Supprimer</a>
+                                     </td>
 
                                 </tr>
                             </t>
@@ -25,7 +33,8 @@
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
+
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
