--- a/templates/faculte.xml
+++ b/templates/faculte.xml
@@ -1,15 +1,19 @@
 <odoo>
     <template id="faculte_template" name="faculte Template" >
         <t t-call="amicales.header"/>
-        <xpath expr="." position="inside">
+         <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
                     <h1>Faculte</h1>
-                    <table class="table table-bordered">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Nom Faculte</th>
                                 <th>Universite</th>
+                                 <th>Action</th>
 
                             </tr>
                         </thead>
@@ -18,14 +22,18 @@
                                 <tr>
                                     <td><t t-esc="faculte.nomFaculte"/></td>
                                     <td><t t-esc="faculte.universite_id.nomUniversite"/></td>
-
+                                     <td>
+                                            <a class="btn btn-primary" t-att-href="'/faculte/' + str(faculte.id)">Modifier</a>
+                                            <a class="btn btn-danger" t-att-href="'/faculte/supprimer/' + str(faculte.id)">Supprimer</a>
+                                     </td>
                                 </tr>
                             </t>
                         </tbody>
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
+
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
