--- a/templates/niveau.xml
+++ b/templates/niveau.xml
@@ -1,11 +1,14 @@
 <odoo>
     <template id="niveau_template" name="niveau Template" >
         <t t-call="amicales.header"/>
-        <xpath expr="." position="inside">
+       <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Etudiant</h1>
-                    <table class="table table-bordered">
+                    <h1>Faculte</h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Niveau</th>
@@ -18,6 +21,10 @@
                                 <tr>
                                     <td><t t-esc="niveau.niveau"/></td>
                                     <td><t t-esc="niveau.departement_id.nomDepartement"/></td>
+                                    <td>
+                                            <a class="btn btn-primary" t-att-href="'/niveau/' + str(niveau.id)">Modifier</a>
+                                            <a class="btn btn-danger" t-att-href="'/niveau/supprimer/' + str(niveau.id)">Supprimer</a>
+                                     </td>
 
                                 </tr>
                             </t>
@@ -25,7 +32,7 @@
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
