--- a/templates/universite.xml
+++ b/templates/universite.xml
@@ -2,14 +2,18 @@
     <template id="universite_template" name="universite Template" >
         <t t-call="amicales.header"/>
         <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Etudiant</h1>
-                    <table class="table table-bordered">
+                    <h1>Universite</h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Nom Universite</th>
                                 <th>Adresse</th>
+                                <th>Action</th>
 
                             </tr>
                         </thead>
@@ -18,14 +22,17 @@
                                 <tr>
                                     <td><t t-esc="universite.nomUniversite"/></td>
                                     <td><t t-esc="universite.adresse"/></td>
-
+                                    <td>
+                                        <a class="btn btn-primary" t-att-href="'/universite/' + str(universite.id)">Modifier</a>
+                                        <a class="btn btn-danger" t-att-href="'/universite/supprimer/' + str(universite.id)">Supprimer</a>
+                                    </td>
                                 </tr>
                             </t>
                         </tbody>
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
