Les vue modifier suprimer

--- a/templates/membre_template_tree.xml
+++ b/templates/membre_template_tree.xml
@@ -1,11 +1,14 @@
 <odoo>
     <template id="membre_template" name="Membre Template" >
         <t t-call="amicales.header"/>
-        <xpath expr="." position="inside">
+       <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Membres</h1>
-                    <table class="table table-bordered">
+                    <h1>Universite</h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Prénom</th>
@@ -20,6 +23,7 @@
                                 <th>Role</th>
                                 <th>Commission</th>
                                 <th>Amicale</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -37,13 +41,17 @@
                                     <td><t t-esc="membre.role"/></td>
                                     <td><t t-esc="membre.commission_id.nomCommission"/></td>
                                     <td><t t-esc="membre.amicale_id.nomAmicale"/></td>
+                                  <td>
+                                        <a class="btn btn-primary" t-att-href="'/membre/' + str(membre.id)">Modifier</a>
+                                        <a class="btn btn-danger" t-att-href="'/membre/supprimer/' + str(membre.id)">Supprimer</a>
+                                    </td>
                                 </tr>
                             </t>
                         </tbody>
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
