--- a/templates/amicale_tree.xml
+++ b/templates/amicale_tree.xml
@@ -1,14 +1,18 @@
 <odoo>
     <template id="amicale_template" name="amicale Template" >
         <t t-call="amicales.header"/>
-        <xpath expr="." position="inside">
+         <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Faculte</h1>
-                    <table class="table table-bordered">
+                    <h1>Universite</h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Nom Amicale</th>
+                                <th>Action</th>
 
 
                             </tr>
@@ -17,14 +21,17 @@
                             <t t-foreach="amicales" t-as="amicale">
                                 <tr>
                                     <td><t t-esc="amicale.nomAmicale"/></td>
-
+                                    <td>
+                                        <a class="btn btn-primary" t-att-href="'/amicale/' + str(amicale.id)">Modifier</a>
+                                        <a class="btn btn-danger" t-att-href="'/amicale/supprimer/' + str(amicale.id)">Supprimer</a>
+                                    </td>
                                 </tr>
                             </t>
                         </tbody>
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
