--- a/templates/commission.xml
+++ b/templates/commission.xml
@@ -2,15 +2,19 @@
     <template id="commission_template" name="commission Template" >
         <t t-call="amicales.header"/>
         <xpath expr="." position="inside">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"/>
+        </xpath>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Faculte</h1>
-                    <table class="table table-bordered">
+                    <h1>Universite</h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>Nom Commission</th>
 
                                 <th>Amicale</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -19,13 +23,17 @@
                                     <td><t t-esc="commission.nomCommission"/></td>
 
                                     <td><t t-esc="commission.amicale_id.nomAmicale"/></td>
+                                <td>
+                                        <a class="btn btn-primary" t-att-href="'/commission/' + str(commission.id)">Modifier</a>
+                                        <a class="btn btn-danger" t-att-href="'/commission/supprimer/' + str(commission.id)">Supprimer</a>
+                                    </td>
                                 </tr>
                             </t>
                         </tbody>
                     </table>
                 </div>
             </div>
-        </xpath>
+            </div>
         <t t-call="amicales.footer"/>
     </template>
 </odoo>
