--- a/static/src/assets/css/style.css
+++ b/static/src/assets/css/style.css
@@ -1536,13 +1536,13 @@ section {
   }
 }
 .my-custom{
-display: flex;
+    display: inline-center;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin-right:10px;
-    padding: 1rem;
+    margin-right:20px;
+    padding: 1px;
     background-color: #F5F5DC;
-    border-radius: 5px;
+    border-radius: 10px;
 
 }
