--- a/templates/login.xml
+++ b/templates/login.xml
@@ -1,10 +1,48 @@
 <odoo>
-    <template id="amicales.login">
-         <t t-call="amicales.header"/>
+   <template id="logindex">
 
-        <p>Login</p>
 
-         <t t-call="amicales.footer"/>
+      <xpath expr="." position="inside">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      </xpath>
+      <t t-name="web.login">
+          <t t-call="amicales.header"/>
+
+        <xpath expr="." position="inside">
+        <section class="vh-100">
+            <div class="container-fluid h-custom">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+              <div class="col-md-5 col-lg-1 col-xl-5">
+                <img src="amicales/static/src/images/login.png" class="img-fluid h-50" alt="Sample image"/>
+              </div>
+              <div class="col-md-8 col-lg-2 col-xl-4 offset-xl-1">
+                <form method="post" action="/web/login" style="magin-rigth:10px;" class="my-custom-class2">
+                  <!-- Email input -->
+                    <div class="my-custom-class">
+                  <div class="form-outline mb-4">
+                    <input type="text" name="login" id="form3Example3" class="form-control form-control-lg"
+                      placeholder="Entrer votre nom utilisateur" />
+                  </div>
+
+                  <!-- Password input -->
+                  <div class="form-outline mb-3">
+                    <input type="password" name="password" id="form3Example4" class="form-control form-control-lg"
+                      placeholder="Entrer votre mot de passe" />
+                  </div>
+                  <div class="text-center text-lg-start mt-4 pt-2">
+                    <button type="submit" class="btn btn-success btn-lg"
+                      style="padding-left: 2.5rem; padding-right: 2.5rem;">Connexion</button>
+                  </div>
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </xpath>
+      </t>
+
 
     </template>
 </odoo>
